Update style.css fixing alignment and visibility.

--- a/css/style.css
+++ b/css/style.css
@@ -899,11 +899,11 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-100%, -100%)
     display: none;
 }
 
-.card-header a:hover + .card-header a i{
+.card-header:hover + .card-header a i{
     display: block;
 }
 
